--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "http-proxy": "^1.18.1",
     "vite": "^4.3.2"
   }
 }
