--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,10 @@
   "main": "server.js",
   "scripts": {
     "build":"babel ./src --out-dir ./build",
-    "start": "node ./build/server.js",
+    "start": "node server.js",
     "dev": "npx nodemon --exec npx babel-node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "vercel-build": "npm run build"
   },
   "author": "overrevvv",
   "license": "ISC",
