--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "build":"babel ./src --out-dir ./build",
+    "buildd":"npm install && babel ./src --out-dir ./build",
     "start": "node server.js",
     "dev": "npx nodemon --exec npx babel-node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
