--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build":"babel ./src --out-dir ./build",
     "buildd":"npm install && npm run build",
-    "start": "node server.js",
+    "start": "node ./build/server.js",
     "startt": "node /build/server.js",
     "dev": "npx nodemon --exec npx babel-node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
