--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "backend for shopping app",
   "main": "server.js",
   "scripts": {
-    "build":"babel ./src --out-dir ./build",
-    "buildd":"npm install && npm run build",
+    "build": "babel ./src --out-dir ./build",
+    "buildd": "npm install && npm run build",
     "start": "node ./build/server.js",
     "startt": "node /build/server.js",
     "dev": "npx nodemon --exec npx babel-node src/server.js",
@@ -18,6 +18,7 @@
     "body-parser": "^1.20.2",
     "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.6.0"
   },
