--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "server.js",
   "scripts": {
     "build": "babel ./src --out-dir ./build",
-    "buildd": "npm install && npm run build",
+    "buildd": "babel ./src --out-file index.js",
     "start": "node ./build/server.js",
-    "startt": "node /build/server.js",
     "dev": "npx nodemon --exec npx babel-node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
