--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "build": "babel ./src --out-dir ./build",
-    "buildd": "npm install && npm run build",
+    "buildd": "babel ./src --out-file index.js",
     "start": "node ./build/server.js",
     "startt": "node /build/server.js",
     "dev": "npx nodemon --exec npx babel-node src/server.js",
