--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "vue": "^3.2.47",
-    "vue-router": "^4.2.1"
+    "vue-router": "^4.2.1",
+    "vue3-toastify": "^0.1.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
